--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="site.css" type="text/css" />
-  <title>Document</title>
+  <style>
+    h1 {
+      font-size: 3em;
+      margin-top: .5em;
+    }
+
+    banner {
+      max-width: 100%;
+    }
+
+    .sub-title {
+      background-color: #fff;
+      font-size: 1.5em;
+      padding: 10px;
+    }
+  </style>
+  <title>Bethany's Pie Shop</title>
 </head>
 <body>
   <header>
