--- a/order.html
+++ b/order.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="site.css" type="text/css" />
   <title>Order | Bethany's Pie Shop</title>
   <style>
+    
+    @media only screen and (min-width: 768px) {
+      article {
+        width: 350px;
+      }
+    }
+
     .input-group {
       margin-bottom: 20px;
     }
@@ -51,6 +58,16 @@
     <aside><img src="images/logo.png" alt="Bethany's Pie Shop"></aside>
     <article>
       <h1>Order</h1>
+
+      <div class="pie">
+        <img src="" />
+        <div class="columns">
+          <div class="title"></div>
+          <div class="price"></div>
+        </div>
+        <p class="desc"></p>
+      </div>
+
       <form action="http://localhost:7071/api/post" method="POST">  <!-- url specific to tutorial -->
 
         <div class="input-group">
@@ -159,4 +176,29 @@
     </nav>
   </footer>
 </body>
+<script>
+  window.addEventListener("DOMContentLoaded", function(e) {
+
+    const order = localStorage.getItem("order");
+
+    if (order) {
+      const pieOrder = JSON.parse(order);
+
+      const pie = document.querySelector(".pie");
+
+      const title = pie.querySelector(".title");
+      const price = pie.querySelector(".price");
+      const desc = pie.querySelector(".desc");
+
+      title.innerText = pieOrder.title;
+      price.innerText = pieOrder.price;
+      desc.innerText = pieOrder.desc;
+
+      const img = pie.querySelector("img");
+      img.setAttribute("src", `./images/${pieOrder.id}.png`);
+      img.setAttribute("alt", pieOrder.title);
+    }
+
+  })
+</script>
 </html>
