--- a/order.html
+++ b/order.html
@@ -69,6 +69,7 @@
       </div>
 
       <form action="http://localhost:7071/api/post" method="POST">  <!-- url specific to tutorial -->
+        <input type="hidden" id="pie-order" name="pie-order">
 
         <div class="input-group">
           <div><label for="first-name">First name</label></div>
@@ -183,6 +184,9 @@
 
     if (order) {
       const pieOrder = JSON.parse(order);
+
+      const orderInput = document.querySelector("#pie-order");
+      orderInput.value = order;
 
       const pie = document.querySelector(".pie");
 
