--- a/order.html
+++ b/order.html
@@ -70,6 +70,7 @@
 
       <form action="http://localhost:7071/api/post" method="POST">  <!-- url specific to tutorial -->
         <input type="hidden" id="pie-order" name="pie-order">
+        <input type="hidden" id="location" name="location">
 
         <div class="input-group">
           <div><label for="first-name">First name</label></div>
@@ -179,6 +180,25 @@
 </body>
 <script>
   window.addEventListener("DOMContentLoaded", function(e) {
+
+    let locationBox= document.querySelector("#location");
+
+    let location = {
+      latitude: "unknown",
+      longitude: "unknown"
+    };
+
+    window.navigator.geolocation.getCurrentPosition(
+      function(position) {
+        location = {
+          latitude: position.coords.latitude,
+          longitude: position.coords.longitude
+        };
+        locationBox.value = JSON.stringify(location);
+      },
+      function(error) {
+        locationBox.value = JSON.stringify(location);
+      });
 
     const order = localStorage.getItem("order");
 
